; ModuleID = '/home/carl/AnghaBench/nanomsg/tests/extr_..srcutilsstopwatch.c_nn_stopwatch_term.c'
source_filename = "/home/carl/AnghaBench/nanomsg/tests/extr_..srcutilsstopwatch.c_nn_stopwatch_term.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_stopwatch = type { i32 }
%struct.timeval = type { i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nn_stopwatch_term(%struct.nn_stopwatch* %0) #0 {
  %2 = alloca %struct.nn_stopwatch*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.timeval, align 8
  %5 = alloca i32, align 4
  store %struct.nn_stopwatch* %0, %struct.nn_stopwatch** %2, align 8
  %6 = call i32 @gettimeofday(%struct.timeval* %4, i32* null)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = icmp eq i32 %7, 0
  %9 = zext i1 %8 to i32
  %10 = call i32 @assert(i32 %9)
  %11 = getelementptr inbounds %struct.timeval, %struct.timeval* %4, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = trunc i64 %12 to i32
  %14 = mul nsw i32 %13, 1000000
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds %struct.timeval, %struct.timeval* %4, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = add nsw i64 %15, %17
  %19 = trunc i64 %18 to i32
  store i32 %19, i32* %5, align 4
  %20 = load i32, i32* %5, align 4
  %21 = load %struct.nn_stopwatch*, %struct.nn_stopwatch** %2, align 8
  %22 = getelementptr inbounds %struct.nn_stopwatch, %struct.nn_stopwatch* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = sub nsw i32 %20, %23
  ret i32 %24
}

declare dso_local i32 @gettimeofday(%struct.timeval*, i32*) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
